syntax = "proto3";

package gatewayapis.server.v1;

import "gatewayapis/server/v1/defined.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./gatewayapis/server/v1";

//服务注册方
service ServerRegisterService {
  //注册服务实例
  rpc PostRegistServiceInstance(PostRegistServiceInstanceRequest) returns (google.protobuf.Empty) {}
  //注册服务HTTP路由
  rpc PostRegistHTTPRouters(PostRegistRoutersRequest) returns (google.protobuf.Empty) {}
  //注册服务GRPC方法
  rpc PostRegistGRPCMethods(PostRegistGRPCMethodsRequest) returns (google.protobuf.Empty) {}
}

message PostRegistServiceInstanceRequest {
  gatewayapis.server.v1.ServiceInstance instance = 1;
}

message PostRegistRoutersRequest {
  repeated gatewayapis.server.v1.HTTPRouter routers = 1;
}

message PostRegistGRPCMethodsRequest {
  repeated gatewayapis.server.v1.GRPCMethod methods = 1;
}
